<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_light"
        android:text="@string/newMsg"
        android:textSize="30sp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <EditText
        android:id="@+id/msg_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msgHint"
        android:textSize="25sp"
        android:padding="@dimen/abc_edit_text_inset_top_material"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24sp" />

    <Button
        android:id="@+id/ok_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_gravity="center"/>

</LinearLayout>